--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
             background: rgba(0,0,0,0.8); z-index: 1000;
         }
 
-        /* --- 1. 첫 화면 배경 (파일명 수정 완료) --- */
+        /* --- 1. 메인 히어로 (배경 이미지 1.jpg) --- */
         .hero {
-            height: 100vh; display: flex; flex-direction: column; justify-content: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             padding: 0 10%;
-            /* GitHub에 있는 실제 파일명으로 수정했습니다 */
-            background: linear-gradient(to right, rgba(0,0,0,0.8) 20%, rgba(0,0,0,0.1)), 
-                        url('Gemini_Generated_Image_xq6b6qxq6b6qxq6b.jpg');
-            background-size: cover; background-position: center;
+            /* 경로를 현재 폴더(./)로 명확히 지정하고 어둡게 처리 */
+            background: linear-gradient(to right, rgba(0,0,0,0.85) 30%, rgba(0,0,0,0.2)), 
+                        url('./1.jpg') no-repeat center center;
+            background-size: cover;
         }
         .hero h1 { font-size: clamp(2.5rem, 6vw, 4rem); line-height: 1.1; margin-bottom: 20px; }
 
@@ -89,7 +92,7 @@
         .flip-front img { width: 100%; height: 100%; object-fit: cover; border-radius: 15px; }
         .flip-back { background: #111; transform: rotateY(180deg); padding: 30px; display: flex; flex-direction: column; justify-content: center; }
 
-        /* 대여 안내 영수증 */
+        /* 영수증 푸터 */
         .receipt-container { display: flex; justify-content: center; padding: 100px 0; }
         .receipt { 
             background: #fdfdf5; color: black; width: 380px; padding: 40px; font-family: 'Courier New', monospace; position: relative; 
