--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             background: rgba(0,0,0,0.8); z-index: 1000;
         }
 
+        /* 메인 배경 설정 */
         .hero {
             height: 100vh;
             display: flex;
@@ -34,7 +35,7 @@
             justify-content: center;
             padding: 0 10%;
             background: linear-gradient(to right, rgba(0,0,0,0.85) 30%, rgba(0,0,0,0.2)), 
-                        url('./1.jpg') no-repeat center center;
+                        url('1.jpg') no-repeat center center;
             background-size: cover;
         }
         .hero h1 { font-size: clamp(2.5rem, 6vw, 4rem); line-height: 1.1; margin-bottom: 20px; }
@@ -43,7 +44,9 @@
         .label { color: var(--accent-pink); font-size: 0.8rem; font-weight: bold; letter-spacing: 2px; }
         h2 { font-size: 2.5rem; margin-top: 10px; margin-bottom: 30px; }
 
-        .manager-text { max-width: 700px; font-size: 1.1rem; margin-bottom: 60px; }
+        /* 점주 소개 문구 스타일 */
+        .manager-text { max-width: 700px; font-size: 1.1rem; margin-bottom: 60px; white-space: pre-line; }
+        
         .equipment-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; margin-top: 20px; }
         .eq-item {
             background: #0d0d0d; padding: 20px; border: 1px solid #222;
@@ -58,25 +61,11 @@
         .eq-name { font-weight: bold; color: #fff; }
         .rent-tag { font-size: 0.6rem; color: #555; font-weight: bold; }
 
-        .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 25px; margin-top: 20px;
-        }
-        .video-card {
-            background: #0a0a0a; border: 1px solid #222; border-radius: 8px; overflow: hidden;
-            position: relative;
-        }
-        .iframe-container {
-            position: relative; width: 100%; padding-bottom: 56.25%; height: 0;
-        }
-        .iframe-container iframe {
-            position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;
-        }
-        .video-tag {
-            position: absolute; top: 10px; left: 10px; background: var(--neon-yellow);
-            color: black; padding: 2px 8px; font-size: 0.7rem; font-weight: bold; z-index: 5;
-        }
+        .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 25px; margin-top: 20px; }
+        .video-card { background: #0a0a0a; border: 1px solid #222; border-radius: 8px; overflow: hidden; position: relative; }
+        .iframe-container { position: relative; width: 100%; padding-bottom: 56.25%; height: 0; }
+        .iframe-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
+        .video-tag { position: absolute; top: 10px; left: 10px; background: var(--neon-yellow); color: black; padding: 2px 8px; font-size: 0.7rem; font-weight: bold; z-index: 5; }
         .video-info { padding: 15px; font-size: 0.9rem; font-weight: bold; }
 
         .char-grid { display: flex; gap: 30px; flex-wrap: wrap; }
@@ -88,10 +77,7 @@
         .flip-back { background: #111; transform: rotateY(180deg); padding: 30px; display: flex; flex-direction: column; justify-content: center; }
 
         .receipt-container { display: flex; justify-content: center; padding: 100px 0; }
-        .receipt { 
-            background: #fdfdf5; color: black; width: 380px; padding: 40px; font-family: 'Courier New', monospace; position: relative; 
-            box-shadow: 10px 10px 0px rgba(255, 234, 0, 0.2);
-        }
+        .receipt { background: #fdfdf5; color: black; width: 380px; padding: 40px; font-family: 'Courier New', monospace; position: relative; box-shadow: 10px 10px 0px rgba(255, 234, 0, 0.2); }
         .receipt::after { content: "APPROVED"; position: absolute; border: 3px solid #e63946; color: #e63946; padding: 5px 15px; font-weight: bold; bottom: 40px; right: 25px; transform: rotate(-15deg); }
         .dash { border-bottom: 2px dashed #ccc; margin: 20px 0; }
     </style>
@@ -112,9 +98,12 @@
         <span class="label">MANAGER</span>
         <h2 class="neon-text">점주 소개</h2>
         <div class="manager-text">
-            <p>VIDEO CLUB의 점주 김근령입니다.</p>
-            <p>영상을 보는 걸 좋아해 직접 제작까지 하게 되었습니다.</p>
-            <p style="margin-top: 20px; color: white;">이곳은 그 기록을 모아둔 공간입니다.</p>
+            VIDEO CLUB의 점주 김근령입니다.
+            영상을 보는 걸 좋아해
+            직접 제작까지 하게 되었습니다.
+            나아가 영상뿐만 아니라
+            조금 더 넓은 범위의 작업도 하고 있습니다.
+            이곳은 그 기록을 모아둔 공간입니다.
         </div>
 
         <span class="label">EQUIPMENT RENTAL</span>
@@ -135,30 +124,22 @@
         <div class="video-grid">
             <div class="video-card">
                 <div class="video-tag">AD</div>
-                <div class="iframe-container">
-                    <iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe>
-                </div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe></div>
                 <div class="video-info">Product Video</div>
             </div>
             <div class="video-card">
                 <div class="video-tag">ANIMATION</div>
-                <div class="iframe-container">
-                    <iframe src="https://www.youtube.com/embed/8XyyVhOo4j4" allowfullscreen></iframe>
-                </div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4" allowfullscreen></iframe></div>
                 <div class="video-info">AI Animation Film</div>
             </div>
             <div class="video-card">
                 <div class="video-tag">SHORTS</div>
-                <div class="iframe-container">
-                    <iframe src="https://www.youtube.com/embed/hGRN-lwvUU4" allowfullscreen></iframe>
-                </div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4" allowfullscreen></iframe></div>
                 <div class="video-info">3D Animation</div>
             </div>
             <div class="video-card">
                 <div class="video-tag">WEBDRAMA</div>
-                <div class="iframe-container">
-                    <iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ" allowfullscreen></iframe>
-                </div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ" allowfullscreen></iframe></div>
                 <div class="video-info">WEBDRAMA</div>
             </div>
         </div>
@@ -170,9 +151,7 @@
         <div class="video-grid">
             <div class="video-card">
                 <div class="video-tag">WEB DRAMA</div>
-                <div class="iframe-container">
-                    <iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe>
-                </div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe></div>
                 <div class="video-info">Web Drama Ep.1</div>
             </div>
         </div>
