--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
         .manager-text { max-width: 700px; font-size: 1.1rem; margin-bottom: 60px; white-space: pre-line; }
 
-        /* 장비 목록 */
         .equipment-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; margin-top: 20px; }
         .eq-item {
             background: #0d0d0d; padding: 20px; border: 1px solid #222;
@@ -56,7 +55,6 @@
         .eq-name { font-weight: bold; color: #fff; }
         .rent-tag { font-size: 0.6rem; color: #555; font-weight: bold; }
 
-        /* 필터링 UI */
         .filter-container { margin-bottom: 40px; }
         .filter-sub { font-size: 0.7rem; color: #666; font-weight: 900; letter-spacing: 1px; display: block; margin-bottom: 10px; }
         .filter-group { display: flex; gap: 10px; flex-wrap: wrap; margin-bottom: 25px; }
@@ -67,7 +65,6 @@
         }
         .filter-btn.active { background: var(--neon-yellow); color: black; border-color: var(--neon-yellow); }
 
-        /* 비디오 그리드 */
         .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 25px; }
         .video-card { background: #0a0a0a; border: 1px solid #222; border-radius: 8px; overflow: hidden; position: relative; transition: 0.4s; }
         .video-card.hide { display: none; }
@@ -77,7 +74,6 @@
         .video-tag { position: absolute; top: 10px; left: 10px; background: var(--neon-yellow); color: black; padding: 2px 8px; font-size: 0.7rem; font-weight: bold; z-index: 5; }
         .video-info { padding: 15px; font-size: 0.9rem; font-weight: bold; }
 
-        /* 캐릭터 카드 */
         .char-grid { display: flex; gap: 30px; flex-wrap: wrap; }
         .flip-card { width: 320px; height: 480px; perspective: 1000px; cursor: pointer; }
         .flip-inner { position: relative; width: 100%; height: 100%; transition: transform 0.6s; transform-style: preserve-3d; }
@@ -86,7 +82,6 @@
         .flip-front img { width: 100%; height: 100%; object-fit: cover; border-radius: 15px; }
         .flip-back { background: #111; transform: rotateY(180deg); padding: 30px; display: flex; flex-direction: column; justify-content: center; }
 
-        /* 영수증 */
         .receipt-container { display: flex; justify-content: center; padding: 100px 0; }
         .receipt { background: #fdfdf5; color: black; width: 380px; padding: 40px; font-family: 'Courier New', monospace; position: relative; box-shadow: 10px 10px 0px rgba(255, 234, 0, 0.2); }
         .receipt::after { content: "APPROVED"; position: absolute; border: 3px solid #e63946; color: #e63946; padding: 5px 15px; font-weight: bold; bottom: 40px; right: 25px; transform: rotate(-15deg); }
@@ -134,7 +129,7 @@
         <h2 class="neon-text section-title">신작 코너</h2>
         <div class="video-grid">
             <div class="video-card">
-                <div class="video-tag">AD</div>
+                <div class="video-tag">PRODUCT</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe></div>
                 <div class="video-info">Product Video</div>
             </div>
@@ -144,7 +139,7 @@
                 <div class="video-info">AI Animation Film</div>
             </div>
             <div class="video-card">
-                <div class="video-tag">SHORTS</div>
+                <div class="video-tag">3D</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4" allowfullscreen></iframe></div>
                 <div class="video-info">3D Animation</div>
             </div>
@@ -178,6 +173,41 @@
         </div>
 
         <div class="video-grid" id="filtered-grid">
+            <div class="video-card" data-category="MEDIA ART">
+                <div class="video-tag">MEDIA ART</div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/vCSrwtncK0Y" allowfullscreen></iframe></div>
+                <div class="video-info">Media Art Portfolio</div>
+            </div>
+            <div class="video-card" data-category="PODCAST">
+                <div class="video-tag">PODCAST</div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/tR-zDeqXqO4" allowfullscreen></iframe></div>
+                <div class="video-info">Podcast Ep.1</div>
+            </div>
+            <div class="video-card" data-category="PODCAST">
+                <div class="video-tag">PODCAST</div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/DVWGfjU2-Jw" allowfullscreen></iframe></div>
+                <div class="video-info">Podcast Ep.2</div>
+            </div>
+            <div class="video-card" data-category="PODCAST">
+                <div class="video-tag">PODCAST</div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/6cFyGEuheX0" allowfullscreen></iframe></div>
+                <div class="video-info">Podcast Ep.3</div>
+            </div>
+            <div class="video-card" data-category="PODCAST">
+                <div class="video-tag">PODCAST</div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/4XuNehNNy0o" allowfullscreen></iframe></div>
+                <div class="video-info">Podcast Ep.4</div>
+            </div>
+            <div class="video-card" data-category="PODCAST">
+                <div class="video-tag">PODCAST</div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/prne2fJYE7I" allowfullscreen></iframe></div>
+                <div class="video-info">Podcast Ep.5</div>
+            </div>
+            <div class="video-card" data-category="PODCAST">
+                <div class="video-tag">PODCAST</div>
+                <div class="iframe-container"><iframe src="https://www.youtube.com/embed/faz2WUjPSdo" allowfullscreen></iframe></div>
+                <div class="video-info">Podcast Ep.6</div>
+            </div>
             <div class="video-card" data-category="ANIMATION">
                 <div class="video-tag">ANIMATION</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/8XyyVhOo4j4" allowfullscreen></iframe></div>
@@ -186,17 +216,17 @@
             <div class="video-card" data-category="SHORTS">
                 <div class="video-tag">SHORTS</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4" allowfullscreen></iframe></div>
-                <div class="video-info">3D Animation</div>
+                <div class="video-info">3D Shorts</div>
             </div>
             <div class="video-card" data-category="WEBDRAMA">
                 <div class="video-tag">WEBDRAMA</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ" allowfullscreen></iframe></div>
-                <div class="video-info">Web Series Ep.1</div>
+                <div class="video-info">Web Drama Episode</div>
             </div>
             <div class="video-card" data-category="AD">
                 <div class="video-tag">AD</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe></div>
-                <div class="video-info">Product AD Film</div>
+                <div class="video-info">Commercial Film</div>
             </div>
         </div>
     </section>
