--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="video-card" data-category="MEDIA ART">
                 <div class="video-tag">MEDIA ART</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/vCSrwtncK0Y" allowfullscreen></iframe></div>
-                <div class="video-info">Media Art Portfolio</div>
+                <div class="video-info">Media Art</div>
             </div>
             <div class="video-card" data-category="PODCAST">
                 <div class="video-tag">PODCAST</div>
@@ -216,17 +216,17 @@
             <div class="video-card" data-category="SHORTS">
                 <div class="video-tag">SHORTS</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/hGRN-lwvUU4" allowfullscreen></iframe></div>
-                <div class="video-info">3D Shorts</div>
+                <div class="video-info">3D Animation</div>
             </div>
             <div class="video-card" data-category="WEBDRAMA">
                 <div class="video-tag">WEBDRAMA</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/KbV-dxd6BoQ" allowfullscreen></iframe></div>
-                <div class="video-info">Web Drama Episode</div>
+                <div class="video-info">Web Drama</div>
             </div>
             <div class="video-card" data-category="AD">
                 <div class="video-tag">AD</div>
                 <div class="iframe-container"><iframe src="https://www.youtube.com/embed/-mfwhKQv4MY" allowfullscreen></iframe></div>
-                <div class="video-info">Commercial Film</div>
+                <div class="video-info">Product Video</div>
             </div>
         </div>
     </section>
